fix: Text alignment of request title

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -515,6 +515,7 @@ article.help-request img.decorative {
   align-items: center;
   display: flex;
   padding-bottom: 0;
+  text-align: start;
 }
 
 .request-title img {
